--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "latest",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@material-ui/pickers": "^3.3.11",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "latest",
     "@mui/x-date-pickers": "^6.16.1",
